--- a/src/App.css
+++ b/src/App.css
@@ -390,7 +390,7 @@ button:hover {
   width: 100%;
   height: 90vh;
   padding: 20px;
-  background-color: #0e1a2b; /* Deep dark blue for main background */
+  background-color: #1c1c1c; /* Deep dark blue for main background */
   color: white; /* General text color */
 }
 
@@ -398,7 +398,7 @@ button:hover {
 .calendar-section {
   width: 75%;
   height: 100%;
-  background-color: #0f223b; /* Dark blue background for calendar */
+  background-color: #061221; /* Dark blue background for calendar */
   border-radius: 10px; /* Rounded corners for smooth design */
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5); /* Subtle shadow for depth */
   padding: 15px;
@@ -458,9 +458,10 @@ button:hover {
 
 /* Right side for Task Details (Modal, etc.) */
 .details-section {
+  margin-left: 1em;
   width: 25%;
   padding: 20px;
-  background-color: #0b0f4d; /* Dark background for sidebar */
+  background-color: #061221; /* Dark background for sidebar */
   border-radius: 10px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
   color: white;
@@ -491,7 +492,7 @@ button:hover {
 }
 
 .rbc-today {
-  background-color: #2400b3;
+  background-color: #0d3266;
 }
 .modal input, .modal textarea {
   width: 100%;
@@ -579,4 +580,13 @@ button:hover {
 .done-task {
   text-decoration: line-through;
   color: #aaa;
+}
+
+
+.bc-btn-group {
+  display: none;
+}
+
+.rbc-btn-group {
+  display: none;
 }
